Thu Jul 22 20:45:32 1993  Kevin Layer  (layer at sole)

	* Makefile: new file fi-leep-lemacs.el

	* fi-clman.el: look in exec-path for `clman'

	* fi-leep-lemacs.el: presenting listeners work for lemacs!

	* fi-leep.el: push more stuff on fi::initialization-forms

	* fi-site-init.el: load fi-leep-lemacs.elc, when in lemacs

	* fi-subproc.el: generalize and hooks to fi::subprocess-filter so
	that the fi-leep-lemacs.el can use it.

	* fi-utils.el: add fi::insert-string (used by epoch and lemacs
	leeps)

Thu Jul 22 16:55:18 1993  Kevin Layer  (layer at sole)

	* fi-lemacs.el: more menu hacking

	* fi-lep.el: fix fi::compile-or-load-file to give better
	notification of what it is doing.

Thu Jul 22 16:04:14 1993  Kevin Layer  (layer at sole)

	* Makefile.fi: local rdist rules; new rules for makeman, et al

	* clman.c, clman.h, clmanaux.c, makeman.c

	* fi-clman.el: use new clman.data, if it exists

	* fi-indent.el: &env -> &environment

	* fi-lemacs.el: redesign menus, looks better but still not done

	* fi-utils.el: fi::get-default-symbol looks at new variable,
	fi::use-symbol-at-point, to determine whether the user is asked
	for a symbol--mode-specific menus bind this to `t'.

	* fi-leep.el: push forms onto fi::initialization-forms that need
	to be eval'd at interface startup time

	* fi-site-init.el: new variable, fi::initialization-forms, used to
	store forms during loading that need to be evaluated at interface
	startup time.

Wed Jul 14 16:58:12 1993  Kevin Layer  (layer at sole)

	* Makefile: add fi-emacs19.elc

	* fi-emacs19.el: stub file, for now

>>>	* fi-keys.el: fix require of 'tags; add fi:uncomment-region

	* fi-lemacs.el: lots of additions, still work in-progress

	* fi-lep.el: when m-. is done, tell what is being searched for

	* fi-site-init.el: load only one of fi-lemacs or fi-emacs19

	* fi-subproc.el: set fi::common-lisp-first-time even when
	non-interactive.

	* fi-utils.el: the "get default symbol" function now behaves