@@ -1,3 +1,8 @@
+Fri Jul 23 00:01:17 1993  Kevin Layer  (layer@sole)
+
+	* Makefile: fix fi-dist rule, add clman-dist; move contents of
+	Makefile.fi here
+
 Thu Jul 22 20:45:32 1993  Kevin Layer  (layer at sole)
 
 	* Makefile: new file fi-leep-lemacs.el
